Rewrote html file to include divs structure Optimized less and styling with mixins Changes to js to reflect new div structure Adding additional configuration to grunt file.js and package.json

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ Icon
 # Ignore installed node modules
 node_modules/*
 npm-debug.log
+bower_components/*
 
 # Ignore css directory(This is compiled in the environment via the unignored less)
 css/*
@@ -42,3 +43,4 @@ js/*.min.js
 # Project Specific
 # =========================
 google-trends.txt
+trends.min.js.map
