--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "main": "index.html",
   "version": "2.0.0",
   "devDependencies": {
+    "bower": "^1.3.9",
     "connect-livereload": "^0.4.0",
     "grunt": "~0.4.5",
     "grunt-contrib-connect": "~0.8.0",
