--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "main": "index.html",
   "version": "2.0.0",
   "devDependencies": {
-    "bower": "^1.3.9",
+    "@material/card": "^0.2.7",
     "connect-livereload": "^0.4.0",
+    "font-awesome": "^4.7.0",
     "grunt": "~0.4.5",
     "grunt-contrib-connect": "~0.8.0",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-less": "^0.10.0",
     "grunt-contrib-uglify": "^0.5.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-git": "~0.2.14",
-    "grunt-shell": "~0.7.0"
+    "grunt-shell": "~0.7.0",
+    "material-components-web": "^0.18.1"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/alexmj212/trends.git"
-  }
+  },
+  "dependencies": {}
 }
